--- a/src/components/Canvas/Canvas.module.scss
+++ b/src/components/Canvas/Canvas.module.scss
@@ -2,7 +2,7 @@
   @include full-size(fixed);
   overflow: hidden;
   overscroll-behavior-y: none;
-
+  // background-color: $white;
   .renderer {
     position: relative;
     z-index: 1;
